--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.hardware.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="geriatric_risk_assessment_form"
         android:name="${applicationName}"
