--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: geriatric_risk_assessment_form
-description: "A new Flutter project."
+description: "POMA-based fall risk assessment for in-hospital elderly patients."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5+1
+  crypto: ^3.0.6
+  http: ^1.5.0
+  shared_preferences: ^2.5.3
+  flutter_beep_plus: ^0.0.3
+  mobile_scanner: ^7.1.3
+  lottie: ^3.3.2
+  supabase_flutter: ^2.10.3
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +66,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/ca/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
