--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mobile_scanner: ^7.1.3
   lottie: ^3.3.2
   supabase_flutter: ^2.10.3
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
